--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
             android:prompt="@string/planet_prompt"
+            android:spinnerMode="dialog"
             android:textSize="25sp" />
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
@@ -38,6 +39,7 @@
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
             android:prompt="@string/planet_prompt"
+            android:spinnerMode="dialog"
             android:textSize="25sp" />
         <Button android:id="@+id/cmdBari" android:background="@drawable/button_style"
             android:layout_width="85sp"  android:textSize="14sp"
@@ -59,6 +61,7 @@
             android:layout_height="wrap_content"
             android:drawSelectorOnTop="true"
             android:prompt="@string/planet_prompt"
+            android:spinnerMode="dialog"
             android:textSize="25sp" />
         <Button android:id="@+id/cmdUpdateBari" android:background="@drawable/button_style"
             android:layout_width="85sp"  android:textSize="14sp"
