--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,7 +29,7 @@
         <!--<item name="android:editTextStyle">@style/customEdit</item>-->
         <!--<item name="android:spinnerStyle">@style/SpinnerStyle</item>-->
         <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
-        <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItem</item>
+        <!--<item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItem</item>-->
     </style>
 
     <style name="CustomThemeActivity" parent="Theme.AppCompat.Light.Dialog">
@@ -38,19 +38,17 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#000000</item>
         <item name="android:icon">@android:color/transparent</item>
-        <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
+        <item name="android:spinnerItemStyle">@style/customEdit</item>
+        <!--<item name="android:spinnerItemStyle">@style/SpinnerItem</item>-->
     </style>
 
     <style name="SpinnerStyle">
         <item name="android:textColor">#000000</item>
         <item name="android:background">#F3F3F3</item>
-        <item name="android:paddingTop">5sp</item>
-        <item name="android:paddingLeft">5sp</item>
-        <item name="android:paddingBottom">5sp</item>
         <item name="android:icon">@drawable/drop</item>
     </style>
     <style name="SpinnerItem">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#006699</item>
         <item name="android:background">#F3F3F3</item>
         <item name="android:paddingTop">5sp</item>
         <item name="android:paddingLeft">5sp</item>
@@ -118,9 +116,7 @@
     </style>
 
     <style name="customEdit">
-        <!-- <item name="android:typeface">serif</item>  -->
         <item name="android:textSize">16sp</item>
-        <!-- <item name="android:textStyle">bold</item> -->
         <item name="android:background">@drawable/edittext_round</item>
         <item name="android:padding">4sp</item>
     </style>
