--- a/app/src/main/res/layout/household_list.xml
+++ b/app/src/main/res/layout/household_list.xml
@@ -77,7 +77,7 @@
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
     <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="always" android:isScrollContainer="true" android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="outsideInset" android:scrollbars="vertical">
-    <LinearLayout android:layout_marginLeft="10sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
         <!--****************** added by sakib**************-->
         <LinearLayout
             android:orientation="horizontal"
@@ -85,62 +85,53 @@
             android:layout_height="match_parent"
             android:textAlignment="center"
             android:gravity="left" android:paddingTop="5sp" android:paddingBottom="5sp"
-            android:background="@color/Heading"
+            android:background="@color/tableHeading"
             >
 
-            <TextView android:layout_marginLeft="10sp"
-                android:text="HH"
-                android:layout_width="30sp"
+            <TextView
+                android:text=" খানা #"
+                android:layout_width="80sp"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvListHeadingNo"
-                android:textColor="@android:color/white"
-                android:layout_gravity="left"
+                android:textColor="@android:color/black"
                 />
 
             <TextView
-                android:layout_marginLeft="30sp"
-                android:text="Head"
-                android:layout_width="wrap_content"
+                android:text="খানা প্রধান"
+                android:layout_width="300sp"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvListHeadingName"
-                android:textColor="@android:color/white"
-                android:layout_gravity="start"
-
+                android:textColor="@android:color/black"
                 />
 
             <TextView
-                android:layout_marginLeft="220sp"
-                android:text="TotMember"
-                android:layout_width="wrap_content"
+                android:text="মোট সদস্য"
+                android:layout_width="120sp"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvListHeadingTotMem"
-                android:textColor="@android:color/white"
-
-                android:layout_gravity="start"
+                android:textColor="@android:color/black"
                 />
 
             <TextView
-                android:layout_marginLeft="20sp"
-                android:text="Status"
+                android:text="ফলাফল"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvListHeadingStatus"
-                android:textColor="@android:color/white"
-
-                android:layout_gravity="start"
-                />
+                android:textColor="@android:color/black" />
         </LinearLayout>
+        <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
         <!--****************** added by sakib**************-->
        <LinearLayout android:id="@+id/secListView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
              <ListView android:scrollbars="vertical"
                   android:id="@+id/lstData"
                   android:layout_width="match_parent"
-                  android:layout_height="250sp"
+                  android:layout_height="wrap_content"
                   android:divider="#000000"
                   android:dividerHeight="1px"
                   android:clickable="true">
               </ListView>
        </LinearLayout>
+        <View android:layout_height="2dip" android:layout_width="fill_parent" android:layout_marginBottom="20sp" android:background="#CCCCCC" />
     </LinearLayout>
 </ScrollView>
 </LinearLayout>
