--- a/app/src/main/res/layout/household_row.xml
+++ b/app/src/main/res/layout/household_row.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="vertical">
-    <LinearLayout android:id="@+id/secListRow" android:layout_marginTop="5sp" android:layout_marginBottom="5sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
-        <!--<TextView android:id="@+id/Vill" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <!--<TextView android:id="@+id/Bari" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <TextView android:id="@+id/HH" android:layout_width="5dp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="1" android:paddingLeft="10sp" />
-        <!--<TextView android:id="@+id/Religion" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <!--<TextView android:id="@+id/MobileNo1" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <!--<TextView android:id="@+id/MobileNo2" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <TextView android:id="@+id/HHHead" android:layout_width="200dp" android:gravity="left"  android:layout_height="wrap_content" android:layout_weight="1" android:background="@android:color/darker_gray" />
-        <TextView android:id="@+id/TotMem" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"/>
-        <TextView android:id="@+id/Visit" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:text="Status" android:background="@android:color/darker_gray"/>
-        <!--<TextView android:id="@+id/TotRWo" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <!--<TextView android:id="@+id/EnType" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <!--<TextView android:id="@+id/EnDate" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <!--<TextView android:id="@+id/ExType" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <!--<TextView android:id="@+id/ExDate" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
-        <!--<TextView android:id="@+id/Rnd" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content"/>-->
+    <LinearLayout android:id="@+id/secListRow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+        <TextView android:id="@+id/HH" android:layout_width="80sp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
+        <TextView android:id="@+id/HHHead" android:layout_width="300sp" android:gravity="left"  android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
+        <TextView android:id="@+id/TotMem" android:layout_width="120sp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
+        <TextView android:id="@+id/Visit" android:layout_width="120sp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:text="Status" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
     </LinearLayout>
  </LinearLayout>
