--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -4,9 +4,7 @@
     android:layout_height="fill_parent"
     android:background="#D7D7D7"
     android:orientation="vertical">
-
-    <View
-        android:layout_width="fill_parent"
+    <View android:layout_width="fill_parent"
         android:layout_height="4dip"
         android:layout_marginBottom="5sp"
         android:background="@color/pageHeadingBack" />
