--- a/app/src/main/res/layout/memberheading.xml
+++ b/app/src/main/res/layout/memberheading.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="vertical">
-    <LinearLayout android:id="@+id/secListRow" android:layout_marginTop="5sp" android:layout_marginBottom="5sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal"  android:background="#C2E0EC" android:paddingTop="5px" android:paddingBottom="5px">
+    <LinearLayout android:id="@+id/secListRow" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal"  android:background="#C2E0EC" android:paddingTop="8px" android:paddingBottom="5px">
         <TextView android:text="Vill" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
         <TextView android:text="Bari" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
         <TextView android:text="HH" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
-        <TextView android:text="সিরিয়াল নং" android:layout_width="80dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
-        <TextView android:text="স্থায়ী নাম্বার" android:layout_width="170dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
+        <TextView android:text="  সিরিয়াল নং" android:layout_width="80dp" android:layout_marginLeft="40sp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
         <TextView android:text="নাম" android:layout_width="190sp" android:gravity="left" android:layout_height="wrap_content" android:textSize="16sp"/>
+        <TextView android:text="স্থায়ী নাম্বার" android:layout_width="170dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
         <TextView android:text="সম্পর্ক" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
         <TextView android:text="লিঙ্গ" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
         <TextView android:text="জন্ম তারিখ" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:textSize="16sp"/>
