--- a/app/src/main/res/layout/member_row.xml
+++ b/app/src/main/res/layout/member_row.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbars="vertical">
-    <LinearLayout android:id="@+id/secListRow" android:layout_marginTop="5sp" android:layout_marginBottom="5sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+    <LinearLayout android:id="@+id/secListRow" android:paddingTop="8sp" android:paddingBottom="8sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
+        <ImageButton android:layout_width="30sp" android:layout_marginLeft="10sp"
+            android:layout_height="30sp" android:background="#ffffff" android:src="@drawable/discard"
+            android:id="@+id/delMember"/>
         <TextView android:id="@+id/Vill" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
         <TextView android:id="@+id/Bari" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
         <TextView android:id="@+id/HH" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
-        <TextView android:id="@+id/MSlNo" android:layout_width="80dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/PNo" android:layout_width="170dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Name" android:layout_width="190sp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Rth" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Sex" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/BDate" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/AgeY" android:layout_width="80dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/MoNo" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/FaNo" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Edu" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/MS" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Ocp" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Sp1" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Sp2" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Sp3" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
-        <TextView android:id="@+id/Sp4" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1" android:layout_marginTop="8sp" android:layout_marginBottom="8sp" />
+        <TextView android:id="@+id/MSlNo" android:layout_width="80dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Name" android:layout_width="190sp" android:gravity="left" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/PNo" android:layout_width="170dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Rth" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Sex" android:layout_width="70dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/BDate" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/AgeY" android:layout_width="80dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/MoNo" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/FaNo" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Edu" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/MS" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Ocp" android:layout_width="100dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Sp1" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Sp2" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Sp3" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
+        <TextView android:id="@+id/Sp4" android:layout_width="120dp" android:gravity="center" android:layout_height="wrap_content" android:layout_weight="1"   />
         <TextView android:id="@+id/EnType" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
         <TextView android:id="@+id/EnDate" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
         <TextView android:id="@+id/ExType" android:layout_width="50dp" android:gravity="center" android:layout_height="wrap_content" android:visibility="gone" />
